# my-fastapi-app

./: README.md  commands.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 376bced6ec6f_create_posts_table.py
app/: database.py  main.py  models.py  oauth2.py  schemes.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: test_users.py
